--- a/hr/templates/job_list.html
+++ b/hr/templates/job_list.html
@@ -26,11 +26,11 @@
       </div>
       <div class="col-md-3">
         <div class="card-body">
-        <a href="" class="btn btn-primary my-2">View</a>
+        <a href="" class="btn btn-primary btn-sm my-2">View</a>
         
         <a href="{url 'Del_job' i.id}" class="btn btn-primary btn-sm my-2">Delete</a>
       
-        <a href="{url 'Jobupdate' i.id}" class="btn btn- btn-sm my-2">Update</a>
+        <a href="{url 'Jobupdate' i.id}" class="btn btn-primary btn-sm my-2">Update</a>
       </div>
     </div>
     </div>
